--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8888",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.12",
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
