--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-toastification": "^1.7.14",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
