--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "vue": "^2.6.14",
+    "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.5.1",
+    "vue-selecto": "^1.21.0",
     "vue-toastification": "^1.7.14",
     "vuex": "^3.6.2"
   },
